openstack_dashboard/static/dashboard/css/style.css
/* new clearfix */
.clearfix:after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: " ";
    clear: both;
    height: 0;
    }
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */

@font-face {
  font-family: 'anivers';
  src: url('../fonts/Anivers_Regular-webfont.eot');
  src: url('../fonts/Anivers_Regular-webfont.eot?iefix') format('eot'),
       url('../fonts/Anivers_Regular-webfont.woff') format('woff'),
       url('../fonts/Anivers_Regular-webfont.ttf') format('truetype'),
       url('../fonts/Anivers_Regular-webfont.svg#webfont3JLVF59W') format('svg');
  font-weight: normal;
  font-style: normal;
}

a {
  color: #43a1d6;
}

ul {
    list-style: none;
    margin: 0;
}

#main_content {
  padding-left: 250px;
  padding-right: 25px;
}

.topbar {
  background: #f2f2f2;
  border-bottom: 1px solid #e5e5e5;
  padding: 10px 25px;
  margin-top: 0;
  margin-left: -25px;
  margin-bottom: 20px;
  margin-right: -25px;
}

.topbar .switcher_bar {
  display: inline-block;
  height: auto;
  width: 160px;
  background-position: 140px center;
  margin-bottom: 0;
  font-size: 11px;
  padding: 0;
}

.topbar .switcher_bar a {
  padding: 2px 10px 1px;
  margin-left: 0;
  display: block;
}

.topbar .switcher_bar ul {
  width: 130px;
}

#user_info {
    color: #888;
    margin: auto 0;
}

#user_info > a {
    margin-left: 25px;
    font-size: 11px !important;
}

.page-header {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: anivers;
}

h2 {
    color: #6a6a6a;
    font-size: 30px;
    font-weight: normal;
}

body {
  background-color: #fff;
}

/* Login Splash Page */

#splash{
  background: #fafafa;
}

#splash .modal {
  background: #fff url(../img/logo.png) no-repeat center 35px;
  width: 390px;
  padding-top: 170px;
  border: 1px solid #e1e1e1;
  margin-left: -195px;  /*accounts for splash's non-standard width */
}

#splash .help-block {
  display: none;
}

#create_container_form .modal-footer{
    margin-top: 190px;
}

.nav li a {
    color: #8EACB7;
    text-shadow: none;
}

.container-fluid {
    padding-left: 0;
}

.sidebar {
    background: #edf9ff;
    border-right: 5px solid #e5e5e5;
    border-bottom: 5px solid #e5e5e5;
    float: left;
}

.sidebar h4 {
    margin-left: 14px;
    color: #999;
}

.sidebar .nav-tabs {
    margin-top: -34px;
}

.sidebar .nav-tabs li.active a {
    background-color: #edf9ff;
}

h1.brand {
    width: 100%;
    margin: 0;
    background-color: #f5f5f5;
    padding-bottom: 40px;
}

h1.brand a {
    background: url(../img/logo.png) top left no-repeat;
    display: block;
    float: left;
    width: 116px;
    height: 123px;
    text-indent: -9999px;
    margin-left: 56px;
    margin-top: 15px;
    margin-bottom: 25px;
}


/* Tenant Dropdown */


a.current_item {
    width: 163px;
    float: left;
}

a.current_item:hover {
    text-decoration: none;
}

a.current_item:hover h3, a.current_item:hover h4 {
    color: #39738c;
}

.switcher_bar {
    background-color: #e9f5fa;
    width: 190px;
    height: 38px;
    padding: 5px 0;
    border: 1px solid #c0d9e4;
    margin-left: 14px;
    margin-bottom: 15px;
    background-image: url(../img/drop_arrow.png);
    background-repeat: no-repeat;
    background-position: 170px 20px;
}

.switcher_bar:hover {
  text-decoration: none;
  background-color: #cde8f4;
}

.switcher_bar a:hover {
  text-decoration: none;
}

.switcher_bar:focus {
  outline: none;
}

.switcher_bar h3 {
    color: #4790ae;
    font-size: 16px;
    margin: -6px 0 0 14px;
    padding: 0;
}

.switcher_bar h4 {
    color: #6fabc4;
    font-size: 10px;
    text-transform: uppercase;
    font-weight: normal;
    padding: 0;
}


.switcher_bar ul {
    border: 1px solid #c0d9e4;
    margin-left: -1px;
    width: 190px;
}

.switcher_bar li a:hover{
  background: #92d6f1;
}


#usage {
    margin-bottom: 25px;
    height: 125px;
}

.usage_block {
      background: #e8f8ff;
  color: #84b6c5;
  border: 1px solid #afe3fb;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
    float: left;
    width: 29%;
    margin-right: 5%;
    min-height: 125px;
}

.usage_block.last {
    margin-right: 0;
}


.usage_block h3 {
  background: #cef0ff;
  color: #4fa5bf;
  font-weight: normal;
  padding: 0 0 0 10px;
  border-bottom: 1px solid #c6e7f5;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.usage_block ul {
    margin: 10px;
}

.usage_block .quantity { font-size: 25px; }

.usage_block li {
  font-size: 11px;
  margin: 0 0 15px 0;
}

.usage_block .unit{
  font-size: 11px;
  text-transform: uppercase;
  padding: 0 0 0 1px;
}

.table_header {
  height: 30px;
  padding: 5px 0;
}

.table_title h3, .table_header h3 {
    font-family: anivers;
    font-weight: normal;
    font-size: 24px;
    margin-bottom: 5px;
    float: left;
}

th {
    background: #f1f1f1;
}


small {
    font-size: 11px;
}

.main_nav {
    list-style: none;
    width: 222px;
    float: left;
    margin: 10px 0 20px 0;
}

.main_nav a {
  color: #999;
  width: 185px;
  padding: 10px;
  display: block;
  margin-left: 20px;
}

.main_nav a.active {
  background: #fff;
  border: 2px solid #d8d8d8;
  border-right: 0;
  border-bottom-color: #ccc;
}

table form {
    margin-bottom: 0;
    width: 1px;
}

.alert-block .alert-actions {
  margin-top: -23px;
  margin-right: -23px;
}

.modal > form,
.alert-actions > form {
    margin-bottom: 0;
}

.alert-block p {
  overflow: hidden;
  word-wrap: break-word;
}

.alert-block p:last-child {
  margin-bottom: 0;
}

#actions.single {
    width: 90px;
}

.table-striped tr td {
  transition: background 0.2s;
  -webkit-transition: background 0.2s;
  -moz-transition: background 0.2s;
  -o-transition: background 0.2s;
}

.inspect {
    float: left;
    display: block;
    margin-top: 5px;
    margin-right: 25px;
}
/* ... */

